### link to personal ling ig and facebook with icons

--- a/md/211410666_Project.md
+++ b/md/211410666_Project.md
@@ -19,3 +19,11 @@
 
 ![](5-1.png)
 ![](5-2.png)
+
+### Finish sidebar transition and fix the position on condition (max-width < 850)
+
+![](6.png)
+
+### link to personal ling ig and facebook with icons
+
+![](7.png)
