### Design Resume add Timeline

--- a/md/211410666_Project.md
+++ b/md/211410666_Project.md
@@ -49,3 +49,13 @@
 
 ![](11-1.png)
 ![](11-2.png)
+
+### Design Resume with Skill and Information
+
+![](12-1.png)
+![](12-2.png)
+
+### Design Resume add Timeline
+
+![](13-1.png)
+![](13-2.png)
